--- a/web/student-search.xhtml
+++ b/web/student-search.xhtml
@@ -7,7 +7,7 @@
     <ui:define name="title">Pretraga studenata</ui:define>
 
     <ui:define name="heading">
-        <h1 class="col-md-offset-2">Unos studenta</h1>
+        <h1 class="col-md-offset-2">Pretraga studenata</h1>
     </ui:define>
 
     <ui:define name="content">
