--- a/web/thesis-approve.xhtml
+++ b/web/thesis-approve.xhtml
@@ -37,7 +37,7 @@
             </div>
             <div class="row">
                 <h:commandButton value="Odbij" styleClass="btn btn-danger pull-right" action="#{thesisAprovalBean.deny()}" style="margin-left: 5px; margin-right: 5px;"/> 
-                <h:commandButton value="Odgovori" styleClass="btn btn-warning pull-right" action="d" style="margin-left: 5px; margin-right: 5px;"/>
+                <!--<h:commandButton value="Odgovori" styleClass="btn btn-warning pull-right" action="d" style="margin-left: 5px; margin-right: 5px;"/>-->
                 <h:commandButton value="Odobri" styleClass="btn btn-success pull-right" action="#{thesisAprovalBean.approve()}" style="margin-left: 5px; margin-right: 5px;"/>
             </div>
 
