--- a/web/index.xhtml
+++ b/web/index.xhtml
@@ -30,13 +30,13 @@
             <div class="form-group">
                 <h:outputLabel for="passwordInput"  styleClass="col-md-3 control-label" value="Password: "/>
                 <div class="col-md-7">
-                    <h:inputText id="passwordInput" styleClass="form-control" value="#{loggedInUserBean.password}"/>
+                    <h:inputSecret id="passwordInput" styleClass="form-control" value="#{loggedInUserBean.password}"/>
                 </div>
             </div>
             
 
             <h:commandButton value="Log in" styleClass="btn btn-default pull-right" action="#{loggedInUserBean.login}"/>
-
+            <h:messages  globalOnly="true" errorStyle="font-size: 20px; color: darkred;" errorClass="list-unstyled"/>
         </h:form>
     </ui:define>
 
