--- a/web/thesis-request.xhtml
+++ b/web/thesis-request.xhtml
@@ -40,8 +40,9 @@
              <div class="form-group">
                 <h:outputLabel for="description" styleClass="col-md-2 control-label" value="Opis" />
                 <div class="col-md-10">
-                    <p:inputTextarea id="description" rows="5" cols="74" value="#{thesisRequestBean.work.description}"/>
+                    <p:inputTextarea id="description" rows="5" cols="74" maxlength="500" counter="display" counterTemplate="{0} karaktera preostalo" value="#{thesisRequestBean.work.description}"/>
                     <h:outputText value="(do 500 karaktera)" styleClass="pull-right"/>
+                    <h:outputText id="display"/>
                 </div>
             </div>
             <h:commandButton value="Pošalji" styleClass="btn btn-primary pull-right" action="#{thesisRequestBean.sendRequest}"/>
