Fixed error report on add-... views

--- a/web/add-employee.xhtml
+++ b/web/add-employee.xhtml
@@ -15,7 +15,7 @@
 
                 <!--<h:outputText value="Unos profesora" style="font-size: 20px;"/>-->
 
-                <p:growl showDetail="true" life="3000"/>
+                <!--<p:growl showDetail="true" life="3000"/>-->
             
             <div class="form-group">
                 <h:outputLabel for="nameInput" styleClass="col-md-2 control-label" value="Ime: "/>
@@ -89,7 +89,10 @@
 
                 <h:commandButton value="Unesi" styleClass="btn btn-primary pull-right" action="#{employeeBean.addEmployee}"/>
 
-           
+            <h:messages showSummary="false"
+        showDetail="true" errorStyle="font-size: 20px; color: darkred;" errorClass="list-unstyled"
+                        infoStyle="font-size: 20px; color: darkgreen;" infoClass="list-unstyled"
+                        />
 
         </h:form>
     </ui:define>
