--- a/web/employee-search.xhtml
+++ b/web/employee-search.xhtml
@@ -36,7 +36,7 @@
             <ui:repeat value="#{employeeSearchBean.foundEmployees}" var="emp" rendered="#{employeeSearchBean.foundEmployees.size() > 0}">
                 <a href="#">
                     <div class="col-md-12" style="margin: 10px 0px; border-top: 1px solid #428bca; padding-left: 0px; padding-right: 0px;">
-                        <p:graphicImage value="/uploads/profilePictures/#{emp.person.pictureURI}" alt="Nema slike" styleClass="col-md-2" style="border: 1px solid; width: 100px; height: 100px;"/>
+                        <p:graphicImage value="#{dropboxesDataBean.pathToRepository}#{emp.person.pictureURI}" alt="Nema slike" styleClass="col-md-2" style="border: 1px solid; width: 100px; height: 100px; padding: 0px;"/>
                         <div class="col-md-10 student-communication" style="height:100px">
                                                     
                             <h:outputText value="#{emp.person.name} #{emp.person.surname}" styleClass="col-md-4" style="margin-top: 10px; margin-right: 20px; display: inline-block;"/>
@@ -46,6 +46,10 @@
                     </div>
                 </a>
             </ui:repeat>
+                <h:messages showSummary="false"
+                        showDetail="true" errorStyle="font-size: 20px; color: darkred;" errorClass="list-unstyled"
+                        infoStyle="font-size: 20px; color: darkgreen;" infoClass="list-unstyled"
+                        />
         </h:form>
     </ui:define>
 
