--- a/web/send-final-version.xhtml
+++ b/web/send-final-version.xhtml
@@ -4,26 +4,32 @@
                 xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
                 template="/templates/main_template.xhtml"
                 xmlns:f="http://xmlns.jcp.org/jsf/core">  
-    <ui:define name="title">Slanje zavrsne verzije rada</ui:define>
-
+    <ui:define name="title">Slanje završne verzije rada</ui:define>
+    <ui:define name="heading"><h1 class="col-md-offset-2">Slanje završne verzije rada</h1></ui:define>
     <ui:define name="content">
-        <h:form enctype="multipart/form-data">
+        <h:form styleClass="col-md-12 form-horizontal" enctype="multipart/form-data">
             <div class="form-group">
-                <h:outputLabel for="titleInput" styleClass="col-md-2 control-label" value="Naslov: "/>
+                <h:outputLabel for="nameInput" styleClass="col-md-2 control-label" value="Naslov: "/>
                 <div class="col-md-10">
-                    <h:inputText id="nameInput" styleClass="form-control" value="#{submitFinalPaper.work.title}"/>
+                    <h:outputText id="nameInput" styleClass="form-control" value="#{submitFinalPaper.work.title}"/>
                 </div>
             </div>
 
             <div class="form-group">
-                <h:outputLabel for="subjectDropbox"  styleClass="col-md-2 control-label" value="Predmet: "/>
+                <h:outputLabel for="subject"  styleClass="col-md-2 control-label" value="Predmet: "/>
                 <div class="col-md-10">
-                    <h:outputText value="#{submitFinalPaper.work.subject}"/>
+                    <h:outputText id="subject" styleClass="form-control" value="#{submitFinalPaper.work.subject}"/>
                 </div>
             </div>
-
-            <p:fileUpload mode="simple" value="#{submitFinalPaper.file}"/>
-            <p:commandButton value="Submit" ajax="false" actionListener="#{submitFinalPaper.upload}"/>
+            <div class="form-group">
+                <p:fileUpload mode="simple" value="#{submitFinalPaper.file}"/>
+                <p:commandButton value="Submit" ajax="false" actionListener="#{submitFinalPaper.upload}" styleClass="btn btn-lg btn-success" style="margin-top: 10px;"/>
+            </div>
+ <h:messages showSummary="false"
+                showDetail="true" errorStyle="font-size: 20px; color: darkred;" errorClass="list-unstyled"
+                infoStyle="font-size: 20px; color: darkgreen;" infoClass="list-unstyled"
+                />
         </h:form>
     </ui:define>
+   
 </ui:composition>
